# CLITERMINAL

./: MANIFEST.in  README.md  install.ps1  install.sh  main.py  pyproject.toml
.kimchi/ferments/: 019efd67-aedc-7433-b18f-68e80fd6e1ea.events.jsonl  019efd67-aedc-7433-b18f-68e80fd6e1ea.json
.myagent/: history.txt
myagent/: README.md  requirements.txt  setup.py
myagent/.myagent/: history.txt
myagent/agents/: code_reviewer.yaml  default.yaml  file_explorer.yaml
myagent/app/: agents.py  cli.py  config.py  context.py  graph.py  memory.py  models.py  orchestrator.py  permissions.py  pricing.py  sessions.py  skills.py  state.py  streaming.py  tool_calls.py  tools.py  tui.py  ui.py
myagent/skills/: code_review.yaml  doc_search.yaml  git_helper.yaml  project_summary.yaml  summarize.yaml
